# Mafoko

./: .gitignore  README.md  api-spec.yml  package-lock.json  package.json
backend/feedback-service/: Dockerfile  pyproject.toml  requirements.txt
backend/feedback-service/app/: __init__.py  main.py
backend/feedback-service/app/api/: deps.py
backend/feedback-service/app/crud/: __init__.py  crud_feedback.py  crud_user.py
backend/feedback-service/app/tests/: conftest.py  test_feedback_api.py  test_feedback_crud.py  test_rbac.py
backend/mavito-common-lib/: pyproject.toml
backend/mavito-common-lib/mavito_common/: README.md
backend/mavito-common-lib/mavito_common/core/: config.py  exceptions.py  security.py
backend/mavito-common-lib/mavito_common/db/: base.py  session.py
backend/mavito-common-lib/mavito_common/models/: __init__.py  achievement.py  bookmark.py  comment.py  comment_vote.py  feedback.py  group_term.py  language.py  learning_path.py  linguist_application.py  term.py  term_application.py  term_status.py  term_vote.py  user.py  user_achievement.py  user_glossary_progress.py  user_learning_progress.py  user_level.py  user_preferences.py  user_xp.py  workspace.py  workspace_group.py  workspace_note.py
backend/mavito-common-lib/mavito_common/schemas/: __init__.py  achievement.py  bookmark.py  comment.py  feedback.py  learning_path.py  linguist_application.py  term.py  term_application.py  user.py  user_achievement.py  user_level.py  user_xp.py  (+4 more)
backend/mavito-common-lib/mavito_common_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+474 files in other folders)
