[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feedback-service"
version = "1.0.0"
description = "Feedback and complaint management service"
authors = [
    {name = "Mavito Team"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "aiosqlite",
    "PyJWT",
    "python-jose[cryptography]"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "ruff",
    "mypy"
]